--- a/src/app/livro-cadastro/livro-cadastro.component.html
+++ b/src/app/livro-cadastro/livro-cadastro.component.html
@@ -36,23 +36,17 @@
                 </div>
               </div>
               <div class="mb-3">
-                <label for="autocomplete" class="form-label">Selecione um autor</label>
-                <input id="autocomplete" name="autocomplete" type="text" class="form-control" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Digite o nome do autor" />
-                <div *ngIf="filteredAutores.length > 0" class="dropdown-menu show w-100">
-                  <button *ngFor="let autor of filteredAutores" class="dropdown-item" type="button" (click)="selecionarAutor(autor)">
-                    {{ autor.nome }}
-                  </button>
-                </div>
-              
-                <div *ngIf="searchQuery && !isAutorSelecionado(searchQuery)">
-                  <button type="button" class="btn btn-primary mt-3" (click)="adicionarAutor()">
-                    Adicionar Autor
+                <label for="autocomplete" class="form-label">Informe o autor</label>
+                <input id="autocomplete" name="autocomplete" type="text" class="form-control" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Digite o autor" autocomplete="off" />
+                <div *ngIf="autores.length > 0" class="dropdown-menu show w-100">
+                  <button *ngFor="let autor of autores" class="dropdown-item" type="button" (click)="selecionarAutor(autor)">
+                    {{ autor.descricao }}
                   </button>
                 </div>
                 <div *ngIf="autoresSelecionados.length > 0" class="mt-3">
                   <ul class="list-group">
                     <li *ngFor="let autor of autoresSelecionados" class="d-flex justify-content-between align-items-center">
-                      {{ autor.nome }}
+                      {{ autor.descricao }}
                       <button type="button" class="btn btn-sm btn-danger" (click)="removerAutor(autor.id)">
                         <i class="fa fa-trash"></i>
                       </button>
@@ -61,17 +55,11 @@
                 </div>
               </div>
               <div class="mb-3">
-                <label for="autocompleteAssunto" class="form-label">Selecione o assunto</label>
+                <label for="autocompleteAssunto" class="form-label">Informe o assunto</label>
                 <input id="autocompleteAssunto" name="autocompleteAssunto" type="text" class="form-control" [(ngModel)]="searchQueryAssunto" (input)="onSearchAssunto()" placeholder="Digite o assunto" />
-                <div *ngIf="filteredAssuntos.length > 0" class="dropdown-menu show w-100">
-                  <button *ngFor="let assunto of filteredAssuntos" class="dropdown-item" type="button" (click)="selecionarAssunto(assunto)">
+                <div *ngIf="assuntos.length > 0" class="dropdown-menu show w-100">
+                  <button *ngFor="let assunto of assuntos" class="dropdown-item" type="button" (click)="selecionarAssunto(assunto)">
                     {{ assunto.descricao }}
-                  </button>
-                </div>
-              
-                <div *ngIf="searchQueryAssunto && !isAssuntoSelecionado(searchQueryAssunto)">
-                  <button type="button" class="btn btn-primary mt-3" (click)="adicionarAssunto()">
-                    Adicionar Assunto
                   </button>
                 </div>
                 <div *ngIf="assuntosSelecionados.length > 0" class="mt-3">
@@ -169,6 +157,5 @@
           </ul>
         </nav>
       </div>
-      
   </div>
   
