--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,35 @@
 <main class="main">
   <div class="content">
-    teste
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Sistema Gerenciador de Livros</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/cadastro-livro" routerLinkActive="active">Cadastro de Livro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/cadastro-assunto" routerLinkActive="active">Cadastro de Assunto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/cadastro-autor" routerLinkActive="active">Cadastro de Autor</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ apiUrl }}/api/relatorio" target="_blank">Gerar Relatório</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
+    <div class="container" style="margin-top: 70px;">
+      <!-- Conteúdo da sua página aqui -->
+    </div>
+    
+    
   </div>
 </main>
 
