--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+.navbar-nav .nav-item .nav-link {
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: white;
+    letter-spacing: 0.5px;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .navbar-nav .nav-item .nav-link:hover {
+    color: #ffcc00;
+    text-decoration: underline;
+    transform: scale(1.05);
+  }
+  
+  .navbar-nav .nav-item .nav-link.active {
+    font-weight: 700;
+    color: #ffc107 !important;
+  }
+  
