--- a/src/app/livro-cadastro/livro-cadastro.component.html
+++ b/src/app/livro-cadastro/livro-cadastro.component.html
@@ -36,6 +36,11 @@
                 </div>
               </div>
               <div class="mb-3">
+                <label for="valor" class="form-label">Valor</label>
+                <input type="text" id="valor" class="form-control" [(ngModel)]="livro.valor" name="valor" required (input)="onValueChange($event)" (keypress)="allowNumbersOnly($event)" [value]="livro.valor | currency:'BRL':'symbol':'1.2-2'" />
+                <div *ngIf="livroForm.submitted && !livro.valor" class="text-danger mt-1">O valor é obrigatório.</div>
+              </div>              
+              <div class="mb-3">
                 <label for="autocomplete" class="form-label">Informe o autor</label>
                 <input id="autocomplete" name="autocomplete" type="text" class="form-control" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Digite o autor" autocomplete="off" />
                 <div *ngIf="autores.length > 0" class="dropdown-menu show w-100">
@@ -108,6 +113,7 @@
                 <th>Editora</th>
                 <th>Edição</th>
                 <th>Ano de publicação</th>
+                <th>Valor</th>
                 <th>Assuntos</th>
                 <th>Autor(es)</th>
                 <th>Ações</th> 
@@ -120,6 +126,7 @@
                 <td>{{ livro.editora }}</td>
                 <td>{{ livro.edicao }}</td>
                 <td>{{ livro.anoPublicacao }}</td>
+                <td>R${{ livro.valor }}</td>
                 <td>
                   <ul><li *ngFor="let assunto of livro.assuntos">{{ assunto.descricao }}</li></ul>
                 </td>
